Disable direcory indexes in htaccess

--- a/maintenance/.htaccess
+++ b/maintenance/.htaccess
@@ -1,3 +1,5 @@
+Options -Indexes
+
 RewriteEngine on
 RewriteCond %{REQUEST_URI} !^/index.html$
 RewriteCond %{REQUEST_URI} !\.(gif|jpe?g|png|css|js)$
